# jax-healpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  tests.yml
_work_dir_/: query_map.md
benchmarks/: __main__.py  script_sphtfunc.py
docs/source/: conf.py  getting_started.md  index.rst
docs/source/api/: clustering.rst  pixelfunc.rst
docs/source/development/: changelog.md
docs/source/examples/: basic_usage.md  clustering.md
jax_healpy/: __init__.py  _query_disc.py  pixelfunc.py  sphtfunc.py
jax_healpy/clustering/: __init__.py  _clustering.py  _kmeans.py
notebooks/: spin_transforms_demo.ipynb
tests/: conftest.py  test_import.py
tests/clustering/: test_kmeans.py
tests/pixelfunc/: test.py  test_ang_vec.py  test_interp.py  test_neighbours.py  test_ring_nest.py  test_udgrade.py
tests/query_disc/: test_query_disc.py
tests/sphtfunc/: conftest.py  test_anafast.py  test_cl.py  test_map_alm.py  test_spin_transforms.py  test_transform_tools.py
