[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling', 'hatch-vcs']

[project]
name = 'jax-healpy'
authors = [
    {name = 'Pierre Chanial', email = 'pierre.chanial@gmail.com'},
    {name = 'Simon Biquard', email = 'sbiquard@gmail.com'},
    {name = 'Wassim Kabalan'},
]
maintainers = [
    {name = 'Pierre Chanial', email = 'pierre.chanial@gmail.com'},
]
description = 'Healpix JAX implementation.'
readme = 'README.md'
keywords = [
    'scientific computing',
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
]
requires-python = '>=3.11'
license = {file = 'LICENSE'}
dependencies = [
    'jax >= 0.10.0',
    'jaxtyping',
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    'healpy',
    'matplotlib',
    'pandas',
    'pytest',
    'pytest-cov',
    'pytest-mock',
    'pytest-rerunfailures',  # reruns the known upstream-s2fft alm2map flake (see test_map_alm.py)
    'setuptools_scm',
    'typer',
    'PyYAML',
    'chex',
]
recommended = [
    's2fft',
]

[project.urls]
homepage = 'https://jax-healpy.readthedocs.io'
repository = 'https://github.com/CMBSciPol/jax-healpy'

[dependency-groups]
dev = [
    {include-group = 'docs'},
    'chex',
    'healpy',
    'matplotlib',
    'pandas',
    'pytest>=9.0',
    'pytest-cov',
    'pytest-mock',
    'PyYAML',
    'typer',
]
docs = [
    'ipykernel>=6.0',
    'myst-parser>=1.0',
    'nbsphinx>=0.8',
    'sphinx>=5.0',
    'sphinx-book-theme>=1.0',
    'sphinx-copybutton>=0.5',
]
cuda = ['jax[cuda13]>=0.10.0']

[tool.hatch.version]
source = 'vcs'

[tool.coverage.report]
exclude_also = [
    'pragma: no cover',
    'except ImportError:',
    'raise NotImplementedError',
    'if typing.TYPE_CHECKING:',
]
show_missing = true
skip_covered = true

[tool.pytest]
addopts = [
    '-rfEX',
    '--cov=jax_healpy',
    '--doctest-modules',
    '--strict-config',
    '--strict-markers',
    '-m', 'not slow',
]
minversion = "9"
testpaths = [
    'tests',
]
markers = [
    "slow: marks tests as slow (deselected by default in CI)",
]

[tool.setuptools_scm]
version_scheme = 'post-release'
fallback_version = '0.0.0'

[tool.setuptools.packages.find]
include = ['jax_healpy*']

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    'E',
    # pyflakes
    'F',
    # pyupgrade
    'UP',
    # flake8-debugger
    'T10',
    # isort
    'I',
]

[tool.ruff.format]
quote-style = 'single'
